removed backslashes because of image issues

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 </head>
 
 <body>
     <nav>
         <a href="https://www.fiverr.com/rashedul_sifat">Home</a>
         <a href="https://www.fiverr.com/rashedul_sifat">Projects</a>
-        <img src="/images/logo.png" alt="Logo image">
+        <img src="images/logo.png" alt="Logo image">
         <a href="https://www.fiverr.com/rashedul_sifat">Reviews</a>
         <a href="https://www.fiverr.com/rashedul_sifat">Contact</a>
     </nav>
@@ -33,7 +33,7 @@
             <a class="order-now" target="_blank" href="https://www.fiverr.com/rashedul_sifat">Order Now</a>
         </div>
         <div class="first-image">
-            <img src="/images/rashed.png" alt="">
+            <img src="images/rashed.png" alt="">
         </div>
     </section>
 
@@ -41,7 +41,7 @@
 
     <section class="background flex">
         <div class="second-image">
-            <img class src="/images/burger1.png" alt="">
+            <img class src="images/burger1.png" alt="">
         </div>
 
         <div class="description2">
@@ -67,7 +67,7 @@
         <div class="recipies">
             <div class="recipe">
                 <div class="recipe-item">
-                    <img src="/images/food1.png" alt="">
+                    <img src="images/food1.png" alt="">
                     <h2>Popular</h2>
                     <p>This is the most popular item among all these foods
                         You're welcome to try it
@@ -97,17 +97,17 @@
     <section id="social" class="flex">
         <div class="social-counting">
             <h1>700k</h1>
-            <img src="/images/youtube.png" alt="">
+            <img src="images/youtube.png" alt="">
             <p>Youtube Subscribers</p>
         </div>
         <div class="social-counting">
             <h1>5.5m</h1>
-            <img src="/images/instagram.png" alt="">
+            <img src="images/instagram.png" alt="">
             <p>Instagram Followers</p>
         </div>
         <div class="social-counting">
             <h1>100k</h1>
-            <img src="/images/dribble.png" alt="">
+            <img src="images/dribble.png" alt="">
             <p>Dribbble Shot Likes</p>
         </div>
     </section>
